--- a/index.html
+++ b/index.html
@@ -1,7 +1,12 @@
 <!doctype html>
 <html>
-<head></head>
-<body> 
-<h1> Breakfast!</h1>
+<head>
+  <link rel="stylesheet" href="style.css">
+</head>
+<body>
+  <h1>Breakfast!</h1>
+   <a href="newfile.html">Go to the new file</a>
+   <a href="http://cc.andydayton.com/">Class site</a>
+   <a href="http://codepen.io/victor2248/pen/rOYNqm">Codepen site</a>
 </body>
 </html>
